--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,12 @@
   <base href="/">
   <meta name=" viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Brainpundits | The Power Within" />
+  <meta property="og:description"
+    content="Certified psychometric tests and skill assessments for Career Guidance and Employability Check." />
+  <meta property="og:image"
+    content="https://s3-us-west-2.amazonaws.com/brainpunditsimages/files/thumb_15879762925561587976292537.png" />
 </head>
 
 <body>
