--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
     content="Certified psychometric tests and skill assessments for Career Guidance and Employability Check." />
   <meta property="og:image"
     content="https://s3-us-west-2.amazonaws.com/brainpunditsimages/files/thumb_15879762925561587976292537.png" />
+  <meta property="fb:app_id" content="205134210685473" />
+
 </head>
 
 <body>
