--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,9 @@
   <meta name=" viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Brainpundits | The Power Within" />
-  <meta property="og:description"
-    content="Certified psychometric tests and skill assessments for Career Guidance and Employability Check." />
-  <meta property="og:image"
-    content="https://s3-us-west-2.amazonaws.com/brainpunditsimages/files/thumb_15879762925561587976292537.png" />
+  <meta property="og:title" content="Github Search" />
+  <meta property="og:description" content="Search github user and packages" />
+  <meta property="og:image" content="https://img.caixin.com/2019-12-12/1576147635453631.jpg" />
   <meta property="fb:app_id" content="205134210685473" />
 
 </head>
