--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Github Search" />
   <meta property="og:description" content="Search github user and packages" />
-  <meta property="og:image" content="https://mmc-stage.s3.amazonaws.com/900f451a-a6b8-4f8e-b168-693554d438ad" />
+  <meta property="og:image" content="https://img.caixin.com/2019-12-12/1576147635453631.jpg" />
   <meta property="fb:app_id" content="205134210685473" />
 
 </head>
